src/pages/Home/Home.css
.main-section {
    height: 100vh;
}

canvas {
    background-color: #080808;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.main-section .modal {
    height: 296px;
}
.modal {
    z-index: 14;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    background-color: #fff;
    border-radius: 8px;
    animation: scale-in .5s ease;
    overflow: hidden;
    transition: transform .5s, opacity .5s;
    color: #363636;
}
.modal.minimize {
    transform: translate(-50%,-50%) scale(0);
    opacity: 0;
}
.modal>div {
    padding: 50px;
}
.modal-icon {
    width: 140px;
    height: 140px;
    border-radius: 50%;
    overflow: hidden;
}
.modal-icon img {
    width: 100%;
    height: 100%;
}
.modal-right {
    width: 0;
    overflow: hidden;
    animation: width .5s forwards ease;
    animation-delay: .9s;
    background-color: #f5f5f5;
    padding: 0 !important;
    /* white-space: nowrap; */
    border-left: 1px solid #f5f5f5;
}
.modal-right>div {
    padding: 10px 30px;
}
.modal-right .header {
    padding: 25px 30px 10px;
    min-width: 460px;
    font-size: 20px;
    font-weight: 600;
}
.header h2 {
    font-weight: 600;
    font-size: 22px;
    margin-top: 10px;
    margin-bottom: 0;
}
.modal .description {
    min-width: 480px;
    color: #4a4a4a;
}
.modal-right .arrow {
    margin-top: 10px;
    animation: translate-up .4s forwards ease, bounce 2s infinite ease;
    opacity: 0;
    animation-delay: 1.4s;
}
.modal-right .arrow svg {
    fill: #9d9d9d;
    cursor: pointer;
}

@keyframes bounce {
    0% {
        transform: translateY(0);
    }
    40% {
        transform: translateY(0);
    }
    60% {
        transform: translateY(7px);
    }
    100% {
        transform: translateY(0);
    }
}

@keyframes translate-up {
    0% {
        margin-top: 25px;
        opacity: 0;
    }
    100% {
        margin-top: 10px;
        opacity: 1;
    }
}

@keyframes scale-in {
    0% {
        transform: translate(-50%,-50%) scale(.1);
        opacity: 0;
    }
    100% {
        transform: translate(-50%,-50%) scale(1);
        opacity: 1;
    }
}

@keyframes width {
    0% {
        width: 0;
        padding: 0;
    }
    100% {
        width: 480px;
        padding: 50px;
    }
}

@media only screen and (max-width: 800px) {
    .modal {
        flex-direction: column;
        width: 100%;
        height: unset !important;
    }
    .modal .description, .modal .header {
        min-width: unset;
    }
    .modal-right {
        width: unset !important;
        height: 0;
    }

    @keyframes width {
        0% {
            height: 0;
            padding: 0;
        }
        100% {
            height: 300px;
            padding: 50px;
        }
    }
}
@media only screen and (max-width: 600px) {
    .bottom-container {
        padding-bottom: 20px !important;
    }
    .bottom-container .header {
        flex-direction: column;
        align-items: center;
    }
    .bottom-container .header .animate-up {
        width: 100%;
        text-align: center;
    }
}

.bottom {
    background-color: var(--primary-color);
    padding: 5px 0 20px 0;
}
.bottom .header h1 {
    font-size: 25px;
}
.bottom-container {
    background-color: #141c3a;
    color: #fff;
    font-family: 'Heebo', sans-serif;
    width: 850px;
    max-width: 100%;
    border-radius: 12px;
    padding: 0 30px;
    transform: translateY(-35px);
}
.bottom-button span {
    border: 2px solid var(--primary-color);
    display: block;
    padding: 8px 20px;
    border-radius: 120px;
    cursor: pointer;
    transition: background-color .3s;
}
.bottom-button span:hover {
    background-color: var(--primary-color);
}
.bottom-content a {
    margin: 0 10px;
}
.bottom-content svg {
    fill: #fff;
    width: 45px;
    height: 45px;
    border: 2px solid #fff;
    padding: 8px;
    border-radius: 50%;
    transition: fill .3s, background-color .3s;
}
.bottom-content svg:hover {
    background-color: #fff;
    fill: var(--primary-color)
}

